--- a/default.conf
+++ b/default.conf
@@ -1,8 +1,8 @@
 server:
 	server_name: Server_1
 	host: localhost
-	port: 7590
-	max_body_size: 4
+	port: 7554
+	max_body_size: 500K
 	error_page: 404 /Users/patutina/Desktop/final/www/index3.html
 	location: /
 		root: /Users/patutina/Desktop/final/storage
